alerts and contact form

--- a/src/App.css
+++ b/src/App.css
@@ -546,7 +546,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 14px 48px;
   font-size: 18px;
   margin-top: 25px;
-  border-radius: 0;
+  border-radius: 10px;
   position: relative;
   transition: 0.3s ease-in-out;
 }
@@ -555,11 +555,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
 }
 .contact form button:hover {
+  border-radius: 10px;
   color: #fff;
 }
 .contact form button::before {
   content: "";
-  background: #121212;
+  color: white;
+  border-radius: 10px;
+  background: #d4d3d3;
   width: 0;
   height: 100%;
   position: absolute;
@@ -570,6 +573,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact form button:hover::before {
   width: 100%;
+  color: white  ;
 }
 
 /************ Footer Css ************/
